--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@ body {
 
 #pokedex {
     min-height: 50vh;
-    background-color: rgb(214, 51, 51);
+    background-color: #FC6C6D;
     color: white;
+    display: flex;
+    padding: 24px;
+}
+
+.info-container {
+    background-color: white;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    margin-top: -40px;
+    min-height: 100px;
 }
